[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "6305318-sands-python"
version = "0.1.0"
description = "Generates signals, modifies them, and plots them"
authors = [{ name = "Casper Lugtmeijer", email = "clugtmeijer@tudelft.nl" }]
dependencies = ["numpy", "matplotlib", "pytest"]

